--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0d0cc909",
    "metadata": {},
    "outputs": [
@@ -24,16 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "┌ Info: Including with Revise: ../src/DSM1D.jl\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.004139 seconds (2.17 k allocations: 108.156 KiB, 90.99% compilation time)\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m "
      ]
     }
    ],
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "26b1e2bf",
    "metadata": {},
    "outputs": [],
@@ -67,60 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c341e944",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6371.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DSM1D.my1DDSMmodel.averagedPlanetRadiusInKilometer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "299be0a5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6372-element Vector{Float64}:\n",
-       " 1814.5\n",
-       " 1815.0\n",
-       " 1815.5\n",
-       " 1816.0\n",
-       " 1816.5\n",
-       " 1817.0\n",
-       " 1817.5\n",
-       " 1818.0\n",
-       " 1818.5\n",
-       " 1819.0\n",
-       "    ⋮\n",
-       " 4996.0\n",
-       " 4996.5\n",
-       " 4997.0\n",
-       " 4997.5\n",
-       " 4998.0\n",
-       " 4998.5\n",
-       " 4999.0\n",
-       " 4999.5\n",
-       " 5000.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example 1-D model (toy). Replace with your actual model arrays.\n",
     "# r_model in meters from Earth center (0..R_ref), assume sorted ascending\n",
@@ -131,40 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a30a73c7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6372-element extrapolate(interpolate((::Vector{Float64},), ::Vector{Float64}, Gridded(Linear())), Flat()) with element type Float64:\n",
-       " 1814.5\n",
-       " 1815.0\n",
-       " 1815.5\n",
-       " 1816.0\n",
-       " 1816.5\n",
-       " 1817.0\n",
-       " 1817.5\n",
-       " 1818.0\n",
-       " 1818.5\n",
-       " 1819.0\n",
-       "    ⋮\n",
-       " 4996.0\n",
-       " 4996.5\n",
-       " 4997.0\n",
-       " 4997.5\n",
-       " 4998.0\n",
-       " 4998.5\n",
-       " 4999.0\n",
-       " 4999.5\n",
-       " 5000.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create an interpolator in radius space (ensure interpolation domain covers used r)\n",
     "itp = LinearInterpolation(r_model, v_model; extrapolation_bc=Flat())"
@@ -172,20 +93,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "7195ef07",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "topographyFromGeoPoint (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Base: +,-,/\n",
     "struct GeoPoint\n",
@@ -248,28 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "4bedf956",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GeoPoint(p1.ecef) = GeoPoint(48.8566, 2.3522000000000003, 7.047140324999535e-10, [4.200914795649138e6, 172559.77631070156, 4.780081341967356e6], 6.366053693814456e6)\n",
-      "p0 = (p1 + p2) / 2.0 = GeoPoint(45.82989800475024, 1.9029714540760907, -8978.352692728113, [4.443193158578102e6, 147626.58304377226, 4.545653677986095e6], 6.358201507709939e6)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "GeoPoint(45.82989800475024, 1.9029714540760907, -8978.352692728113, [4.443193158578102e6, 147626.58304377226, 4.545653677986095e6], 6.358201507709939e6)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p1 = GeoPoint(48.8566,2.3522) # Paris\n",
     "p2 = GeoPoint(42.8,1.5) # Tarascon (à peu près)\n",
@@ -280,23 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "adcbda93",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "  0.7166970175507206\n",
-       " -0.07375625720924696\n",
-       " -0.693473431038555"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pre-definition of x-axis vector p1->p2 (normally this is not the one we want)\n",
     "p2_1 = p2-p1\n",
@@ -305,23 +185,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "45025ca4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       " 0.698812888076966\n",
-       " 0.023218292604404035\n",
-       " 0.7149275895823759"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# definition of z-axis vector p0 -> p0_surface\n",
     "\n",
@@ -330,23 +197,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "72039663",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "  0.036629318622305354\n",
-       "  0.9970002078796852\n",
-       " -0.06818268478968828"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# y-axis: complete right-handed system\n",
     "y_axis = normalize(cross(z_axis, x_axis_tentative))"
@@ -354,46 +208,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "b1cb69ac",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "  0.7143660409585519\n",
-       " -0.07383424934541309\n",
-       " -0.6958661244440657"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_axis = cross(y_axis, z_axis)  # now perfectly orthogonal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "7feea3e8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3×3 SMatrix{3, 3, Float64, 9} with indices SOneTo(3)×SOneTo(3):\n",
-       " 0.714366   -0.0738342  -0.695866\n",
-       " 0.0366293   0.997      -0.0681827\n",
-       " 0.698813    0.0232183   0.714928"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Rotation matrix\n",
     "R = SMatrix{3,3,Float64}(\n",
@@ -405,40 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "1777feca",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "p_2D_to_ECEF (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_2D_to_ECEF(x_2D,z_2D,pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = pOrigin+R*SVector(x_2D,0.e0,z_2D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "eec1a7f9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "p_ECEF_to_2D (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_ECEF_to_2D(p_3D::SVector{3,Float64},pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = R' * (p_3D - pOrigin)"
    ]
@@ -453,89 +261,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "538ed170",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "    8341.076143154814\n",
-       "  -48189.85002661229\n",
-       " -334492.0981322616"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_ECEF_to_2D(p0.ecef, p1.ecef,R)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "fa555934",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "      4.200914099783014e6\n",
-       " 172559.70812801676\n",
-       "      4.780082056894946e6"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p0_1m_above=p_2D_to_ECEF(0,1,p1.ecef,R)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "6dae34a0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       " -2.2947774760174783e-10\n",
-       "  6.235097495158809e-12\n",
-       "  1.0000000001379907"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_ECEF_to_2D(p0_1m_above, p1.ecef,R)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "e9bb26a9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-400000.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Δx = 500 # in metre\n",
     "Δz = 500\n",
@@ -546,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "2fc45c28",
    "metadata": {},
    "outputs": [],
@@ -557,20 +316,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "6254253a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "676097.0312306838"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "leftLimit = 0 # in metre so x is always non-negative\n",
     "rightLimit = p2_1.radius\n"
@@ -578,28 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "c40352eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nx = Int64((rightLimit - leftLimit) ÷ Δx + 1) = 1353\n",
-      "Nz = Int64((altMax - altMin) ÷ Δz + 1) = 811\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "811"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@show Nx = Int64((rightLimit-leftLimit) ÷ Δx+1) \n",
     "@show Nz = Int64((altMax-altMin) ÷ Δz + 1 ) "
@@ -607,69 +338,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
+   "id": "b98f97ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DSM1D.my1DDSMmodel.C_Qκ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21df6ddb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myRadiiArray=[5330.0,7330.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a3523059",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(::Matrix{Float64}, ::Vector{Int64})\nThe function `compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Vector{Float64}, !Matched::String)\n   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:606\n  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Float64)\n   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:571\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(::Matrix{Float64}, ::Vector{Int64})\n",
-      "The function `compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray` exists, but no method is defined for this combination of argument types.\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Vector{Float64}, !Matched::String)\n",
-      "   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:606\n",
-      "  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Float64)\n",
-      "   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:571\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X51sZmlsZQ==.jl:1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "DSM1D.compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(DSM1D.my1DDSMmodel.C_ρ,([5330,6330]))"
+    "radii,params=DSM1D.compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(DSM1D.my1DDSMmodel,myRadiiArray,\"below\")\n",
+    "params.Vph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "94c2a6fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(::Vector{Int64})\nThe function `compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Vector{Float64}, !Matched::String)\n   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:606\n  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Float64)\n   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:571\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(::Vector{Int64})\n",
-      "The function `compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray` exists, but no method is defined for this combination of argument types.\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Vector{Float64}, !Matched::String)\n",
-      "   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:606\n",
-      "  compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray(!Matched::Main.DSM1D.DSM1DPSVmodel, !Matched::Float64)\n",
-      "   @ Main.DSM1D ~/Documents/Github/flexibleDSM/OPTmotors/src/mainStructures.jl:571\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X50sZmlsZQ==.jl:1"
-     ]
-    }
-   ],
-   "source": [
-    "DSM1D.compute1DseismicParamtersFromPolynomialCoefficientsWithGivenRadiiArray([6330,6340])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "e0173df5",
    "metadata": {},
    "outputs": [],
@@ -688,60 +388,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "284400ed",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GeoPoint(45.26820230196961, 2.5540239364680706, -18090.050762195096, [4.479279745343279e6, 199801.2968604095, 4.495524046612065e6], 6.349299492773748e6)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "allGridsInGeoPoints[3,3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "280a4f86",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6.4514247701887805e6"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "effectiveRadii[200,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "fa2c6a4b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6.351882957945972e6"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "minimum(effectiveRadii)"
    ]
