--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -1103,13 +1103,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "f58f4c2a",
+   "execution_count": 188,
+   "id": "b692a174",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((57,), (390,), (57, 390))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "size(topo.x),size(topo.y),size(topo.z')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1a7fa3c",
+   "metadata": {},
+   "source": [
+    "# I need to : \n",
+    "add local coordinates and normals at each point as options to GeoPoint\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4d59fad",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "GMT.gmtwrite(tmpfile,topo)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
