--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 193,
    "id": "f671d528",
    "metadata": {},
    "outputs": [
@@ -1015,95 +1015,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "84076b59",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ErrorException",
-     "evalue": "Can't send the Grid data via G and input array",
-     "output_type": "error",
-     "traceback": [
-      "Can't send the Grid data via G and input array\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] error(s::String)\n",
-      "   @ Base ./error.jl:35\n",
-      " [2] parse_G_grdtrk(d::Dict{Symbol, Any}, symbs::Vector{Symbol}, cmd::String, arg1::Vector{Float64}, arg2::Vector{Float64})\n",
-      "   @ GMT ~/.julia/packages/GMT/Td19G/src/grdtrack.jl:96\n",
-      " [3] grdtrack(cmd0::String, arg1::Vector{Float64}, arg2::Vector{Float64}; kwargs::@Kwargs{G::GMTgrid{Float32, 2}})\n",
-      "   @ GMT ~/.julia/packages/GMT/Td19G/src/grdtrack.jl:21\n",
-      " [4] grdtrack\n",
-      "   @ ~/.julia/packages/GMT/Td19G/src/grdtrack.jl:12 [inlined]\n",
-      " [5] #grdtrack#515\n",
-      "   @ ~/.julia/packages/GMT/Td19G/src/grdtrack.jl:106 [inlined]\n",
-      " [6] top-level scope\n",
-      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X60sZmlsZQ==.jl:17"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Suppose you have\n",
-    "# allGridsInGeoPoints :: Array{GeoPoint,2}\n",
-    "# topo :: GMTgrid\n",
-    "\n",
-    "Nx, Nz = size(allGridsInGeoPoints)\n",
-    "\n",
-    "# 1️⃣ Flatten the 2D array\n",
-    "allpoints = allGridsInGeoPoints[:]\n",
-    "\n",
-    "# 2️⃣ Extract numeric vectors\n",
-    "lons = [p.lon for p in allpoints]\n",
-    "lats = [p.lat for p in allpoints]\n",
-    "\n",
-    "# 3️⃣ Query the grid\n",
-    "# The grid is passed as `G=topo`\n",
-    "topo_vals = GMT.grdtrack(lons, lats; G=topo)  # returns Vector{Float64}\n",
-    "\n",
-    "# 4️⃣ Reshape back to original 2D grid\n",
-    "topo_vals_2D = reshape(topo_vals, Nx, Nz)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "id": "33df2728",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "id": "0d9a9356",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/var/folders/dv/j6sfp1517qq653wf_c37rzrr0000gp/T/jl_It6zaroPmF.nc\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "using GMT\n",
-    "\n",
-    "# Suppose topo is your GMTgrid\n",
-    "topo = GMT.grdcut(\"@earth_relief_01m\", region=[lon_min, lon_max, lat_min, lat_max])\n",
-    "\n",
-    "# Save the GMTgrid to a temporary NetCDF file\n",
-    "tmpfile = tempname() * \".nc\"\n",
-    "@show tmpfile\n",
-    "\n"
+    "# resolution can be @earth_relief_01m (≈2 km), @earth_relief_03m, or coarser like 10m, 30m, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 195,
    "id": "b692a174",
    "metadata": {},
    "outputs": [
