--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 212,
    "id": "7195ef07",
    "metadata": {},
    "outputs": [
@@ -215,6 +215,31 @@
     "    ecef::SVector{3,Float64}\n",
     "    radius::Float64 # in metre\n",
     "    #effectiveRadius::Float64 # in metre (useful to get values from 1D averaged model)\n",
+    "end\n",
+    "\n",
+    "struct localCoord2D\n",
+    "    ix::Int64\n",
+    "    iz::Int64\n",
+    "    x::Float64\n",
+    "    z::Float64\n",
+    "    horizontalVector::SVector{2,Float64}\n",
+    "    normalVector::SVector{2,Float64}\n",
+    "end\n",
+    "\n",
+    "struct localCoord3D\n",
+    "    ix::Int64\n",
+    "    iy::Int64\n",
+    "    iz::Int64\n",
+    "    x::Float64\n",
+    "    y::Float64\n",
+    "    z::Float64\n",
+    "    horizontalVector1::SVector{3,Float64}\n",
+    "    horizontalVector2::SVector{3,Float64}\n",
+    "    normalVector::SVector{3,Float64}\n",
+    "end\n",
+    "\n",
+    "function localCoord2D(ix,iz,x,z)\n",
+    "    localCoord2D(ix,iz,x,z,(0.0,0.0),(0.0,0.0))\n",
     "end\n",
     "\n",
     "function GeoPoint(lat::Float64, lon::Float64; alt=0.0, ell=wgs84)\n",
@@ -715,13 +740,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 214,
    "id": "e0173df5",
    "metadata": {},
    "outputs": [],
    "source": [
     "allGridsInGeoPoints=Array{GeoPoint,2}(undef,Nx,Nz)\n",
+    "\n",
     "effectiveRadii=Array{Float64,2}(undef,Nx,Nz)\n",
+    "\n",
+    "allGridsInCartesian2D=Array{localCoord2D,2}(undef,Nx,Nz)\n",
+    "\n",
     "seismicModel2D=(ρ=zeros(Float64,Nx,Nz),Vpv=zeros(Float64,Nx,Nz),Vph=zeros(Float64,Nx,Nz),Vsv=zeros(Float64,Nx,Nz),Vsh=zeros(Float64,Nx,Nz),Qμ=zeros(Float64,Nx,Nz),Qκ=zeros(Float64,Nx,Nz),QμPower=zeros(Float64,Nx,Nz),QκPower=zeros(Float64,Nx,Nz),η=zeros(Float64,Nx,Nz))\n",
     "\n",
     "for iXZ in CartesianIndices(allGridsInGeoPoints)\n",
@@ -729,14 +758,18 @@
     "    x = leftLimit+(ix-1)*Δx\n",
     "    z = altMin+(iz-1)*Δz \n",
     "    tmpGeoPoint=GeoPoint(p_2D_to_ECEF(x,z,p1.ecef,R))\n",
+    "    \n",
     "    allGridsInGeoPoints[iXZ]=tmpGeoPoint\n",
+    "\n",
+    "    allGridsInCartesian2D[iXZ]=localCoord2D(ix,iz,x,z)\n",
+    "  \n",
     "    effectiveRadii[iXZ]=effectiveRadius(tmpGeoPoint,DSM1D.my1DDSMmodel.averagedPlanetRadiusInKilometer*1.e3 )\n",
     "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 206,
    "id": "284400ed",
    "metadata": {},
    "outputs": [
@@ -1041,6 +1074,47 @@
    ],
    "source": [
     "size(topo.x),size(topo.y),size(topo.z')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "081b7056",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "minimum(topo.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "939c8e88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "126.45999999999744"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "topoInterpolater = interpolate((topo.y,topo.x),topo.z,Gridded(Linear()))\n",
+    "topoInterpolater(48.12,2.04)"
    ]
   },
   {
