--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.005722 seconds (2.17 k allocations: 108.156 KiB, 76.14% compilation time)\n"
+      "  0.004134 seconds (2.17 k allocations: 108.156 KiB, 91.25% compilation time)\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "299be0a5",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a30a73c7",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "bdb8350e",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 8,
    "id": "7195ef07",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "4bedf956",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "adcbda93",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "45025ca4",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "72039663",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "b1cb69ac",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "7feea3e8",
    "metadata": {},
    "outputs": [
@@ -426,9 +426,9 @@
      "data": {
       "text/plain": [
        "3×3 SMatrix{3, 3, Float64, 9} with indices SOneTo(3)×SOneTo(3):\n",
-       " 0.714366   -0.0738342  -0.695866\n",
-       " 0.0366293   0.997      -0.0681827\n",
-       " 0.698813    0.0232183   0.714928"
+       "  0.714366    0.0366293  0.698813\n",
+       " -0.0738342   0.997      0.0232183\n",
+       " -0.695866   -0.0681827  0.714928"
       ]
      },
      "metadata": {},
@@ -438,15 +438,15 @@
    "source": [
     "#Rotation matrix\n",
     "R = SMatrix{3,3,Float64}(\n",
-    "    x_axis[1], y_axis[1], z_axis[1],\n",
-    "    x_axis[2], y_axis[2], z_axis[2],\n",
-    "    x_axis[3], y_axis[3], z_axis[3]\n",
+    "    x_axis[1], x_axis[2], x_axis[3],\n",
+    "    y_axis[1], y_axis[2], y_axis[3],\n",
+    "    z_axis[1], z_axis[2], z_axis[3]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "1777feca",
    "metadata": {},
    "outputs": [
@@ -461,12 +461,12 @@
     }
    ],
    "source": [
-    "p_2D_to_ECEF(x_2D,z_2D,pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = pOrigin+R'*SVector(x_2D,0.e0,z_2D)"
+    "p_2D_to_ECEF(x_2D,z_2D,pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = pOrigin+R*SVector(x_2D,0.e0,z_2D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "eec1a7f9",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
     }
    ],
    "source": [
-    "p_ECEF_to_2D(p_3D::SVector{3,Float64},pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = R * (p_3D - pOrigin)"
+    "p_ECEF_to_2D(p_3D::SVector{3,Float64},pOrigin::SVector{3,Float64},R::SMatrix{3,3,Float64}) = R' * (p_3D - pOrigin)"
    ]
   },
   {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "538ed170",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "06d45b25",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "fa555934",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "6dae34a0",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "e9bb26a9",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "6254253a",
    "metadata": {},
    "outputs": [
@@ -642,10 +642,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "c40352eb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nx = Int64((rightLimit - leftLimit) ÷ Δx + 1) = 1353\n",
+      "Nz = Int64((altMax - altMin) ÷ Δz + 1) = 811\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -740,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 25,
    "id": "e0173df5",
    "metadata": {},
    "outputs": [],
@@ -769,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 26,
    "id": "284400ed",
    "metadata": {},
    "outputs": [
@@ -789,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "id": "280a4f86",
    "metadata": {},
    "outputs": [
@@ -809,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "id": "6b60d8ed",
    "metadata": {},
    "outputs": [
@@ -829,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "id": "fa2c6a4b",
    "metadata": {},
    "outputs": [
