going back to paris

--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -16,10 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0d0cc909",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
+      "┌ Info: Including with Revise: ../src/batchDrWatson.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
+      "┌ Info: Including with Revise: ../src/DSM1D.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n"
+     ]
+    }
+   ],
    "source": [
     "# Nobuaki Fuji Oct 2025\n",
     "\n",
@@ -34,13 +46,14 @@
     "ParamFile = \"../test/testparam.csv\"\n",
     "include(\"../src/batchRevise.jl\") \n",
     "\n",
+    "myInclude(\"../src/batchDrWatson.jl\")\n",
     "myInclude(\"../src/DSM1D.jl\")\n",
     "using .DSM1D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "26b1e2bf",
    "metadata": {},
    "outputs": [],
@@ -50,10 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7195ef07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "effectiveRadius (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import Base: +,-,/,*\n",
     "struct GeoPoint\n",
