--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "0d0cc909",
    "metadata": {},
    "outputs": [
@@ -28,6 +28,8 @@
       "┌ Info: Including with Revise: ../src/batchDrWatson.jl\n",
       "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
       "┌ Info: Including with Revise: ../src/DSM1D.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
+      "┌ Info: Including with Revise: ../src/batchGMT.jl\n",
       "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n"
      ]
     }
@@ -48,6 +50,7 @@
     "\n",
     "myInclude(\"../src/batchDrWatson.jl\")\n",
     "myInclude(\"../src/DSM1D.jl\")\n",
+    "myInclude(\"../src/batchGMT.jl\")\n",
     "using .DSM1D"
    ]
   },
