--- a/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
+++ b/OPTmotors/misc/make_2Dtable_From1DEarthModels.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0d0cc909",
    "metadata": {},
    "outputs": [
@@ -24,12 +24,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "┌ Warning: /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchGMT.jl no longer exists, deleted all methods\n",
+      "└ @ Revise /Users/nobuaki/.julia/packages/Revise/p9Zlq/src/packagedef.jl:685\n",
       "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
       "┌ Info: Including with Revise: ../src/batchDrWatson.jl\n",
       "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
       "┌ Info: Including with Revise: ../src/DSM1D.jl\n",
       "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
-      "┌ Info: Including with Revise: ../src/batchGMT.jl\n",
+      "┌ Info: Including with Revise: ../src/GeoPoints.jl\n",
       "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n"
      ]
     }
@@ -50,7 +52,7 @@
     "\n",
     "myInclude(\"../src/batchDrWatson.jl\")\n",
     "myInclude(\"../src/DSM1D.jl\")\n",
-    "myInclude(\"../src/batchGMT.jl\")\n",
+    "myInclude(\"../src/GeoPoints.jl\")\n",
     "using .DSM1D"
    ]
   },
